--- a/국비지원학원/web/html/html_1_tag_basic/html_image.html
+++ b/국비지원학원/web/html/html_1_tag_basic/html_image.html
@@ -7,7 +7,13 @@
 </head>
 <body>
     <!-- 이미지 크기 확인 -->
-    <img src="../../img/rice.png"> <br/>
-    <img src="../../img/rice.png" title="쌀이미지" width="50" height="50">
+    <img src="../../img/rice.png"/> <br/>
+    <img src="../../img/rice.png" title="쌀이미지" width="50" height="50"/><br/>
+    <!-- 이미지를 찾지못했을때 출력 확인 -->
+    <img src="../img/apple.png" alt="사과이미지" width="100"/> <br/>
+    <hr/>
+    <a href="html_a.html">
+        <img src="http://koreate.net/imgs/retry.png" width="200"/>
+    </a>
 </body>
 </html>
