html_form_input_datalist

--- a/국비지원학원/web/html/test_form.html
+++ b/국비지원학원/web/html/test_form.html
@@ -113,7 +113,14 @@
             <button>버튼2</button>
             <button type="button">버튼3</button>
         </fieldset>
-
+        <br/>
+        <input list="depList" />
+        <datalist id="depList">
+            <option value="컴퓨터공학"></option>
+            <option value="영어영문"></option>
+            <option value="경영학"></option>
+            <option value="사회체육"></option>
+        </datalist>
 
         <input type="submit" /> 
     </form>
