css_1_basic_external

--- a/국비지원학원/web/css/css_1_basic/test_internal.html
+++ b/국비지원학원/web/css/css_1_basic/test_internal.html
@@ -7,7 +7,10 @@
     <style>
         h1{
             background-color: plum;
-            color: rgba(0, 255, 128, 1);
+            /* a : 알파 = 투명도 조절  */
+            /* color: rgba(0, 255, 128, 1);  */
+            /* 16진법으로 표현 */
+            color: #ff0000;
         }
     </style>
 </head>
