--- a/국비지원학원/web/html/html_practice/html_practice04.html
+++ b/국비지원학원/web/html/html_practice/html_practice04.html
@@ -4,23 +4,28 @@
 <head>
     <meta charset="utf-8"/>
     <title>login form</title>
-    <style>
-        span{display: inline-block ; width: 105px;}
-    </style>
 </head>
 <body>
-    <span>이메일</span>
-    <input type="email" name="email" value="neo@naver.com"/>
-    <br/>
-    <span>이름</span>
-    <input type="text" required value="네오"/>
-    <br/>
-    <span>비밀번호</span>
-    <input type="password" required value="12345"/>
-    <br/>
-    <span>비밀번호 확인</span>
-    <input type="password" required value="12345"/>
-    <br/>
+    <table>
+        <tr>
+            <td>이메일</td>
+            <td>
+                <input type="email" name="email" value="neo@naver.com"/>
+            </td>
+        </tr>
+        <tr>
+            <td>이름</td>
+            <td><input type="text" required value="네오"/></td>
+        </tr>
+        <tr>
+            <td>비밀번호</td>
+            <td><input type="password" required value="12345"/></td>
+        </tr>
+        <tr>
+            <td>비밀번호 확인</td>
+            <td><input type="password" required value="12345"/></td>
+        </tr>
+    </table>
     <input type="submit" value="제출"/>
 </body>
 </html>
