practice03_detail_repair

--- a/국비지원학원/web/html/html_practice/html_practice03.html
+++ b/국비지원학원/web/html/html_practice/html_practice03.html
@@ -6,6 +6,7 @@
     <title>table</title>
 </head>
 <body>
+    <!-- table>(tr>(th*6))((tr>td*6)*9) -->
     <table border="1">
         <tr>
             <th colspan="6">한국의차</th>
