--- a/국비지원학원/web/html/html_practice/html_practice05.html
+++ b/국비지원학원/web/html/html_practice/html_practice05.html
@@ -6,17 +6,28 @@
     <title></title>
 </head>
 <body>
-    이름
-    <input type="text" name="이름" required value="neo"/>
+        이름
+        <input type="text" name="이름" required value="neo"/>
     <br/>
     성별
-    <input type="radio" name="sex" value="남성" />남성
-    <input type="radio" name="sex" value="여성" checked />여성
+    
+    <label>
+        <input type="radio" name="sex" value="남성" />남성
+    </label>
+    <label>
+        <input type="radio" name="sex" value="여성" checked />여성
+    </label>
     <br/>
     취미
-    <input type="checkbox" name="운동"/>운동
-    <input type="checkbox" name="음악" checked />음악
-    <input type="checkbox" name="개발" checked />개발
+    <label>
+        <input type="checkbox" name="hobby"/>운동
+    </label>
+    <label>
+        <input type="checkbox" name="hobby" checked />음악
+    </label>
+    <label>
+        <input type="checkbox" name="hobby" checked />개발
+    </label>
     <br/>
     <input type="submit" value="제출">
 </body>
