--- a/국비지원학원/web/html/html_practice/html_practice06.html
+++ b/국비지원학원/web/html/html_practice/html_practice06.html
@@ -3,35 +3,15 @@
 <html lang="ko">
 <head>
     <meta charset="utf-8"/>
-    <title>personal practice</title>
+    <title>float 배치</title>
 </head>
 <body>
-    <h1><a href="../../web_개요.md" 
-        title="web의개요 필기노트"
-        target="_blank">WEB</a>
-    </h1>
+    <h2>스폰지밥</h2>
     <hr/>
-    <h2>
-        <a href="../HTML_기초.md"
-        title="html 필기노트"
-        target="_blank">html</a>
-    </h2>
-    <table border="1">
-        <tr>
-            <th colspan="6">html</th>
-        </tr>
-        <tr>
-            <th colspan="6">기본태그</th>
-        </tr>
-        <tr>
-            <td><a href="../html_1_tag_basic/html_a.html">a</a></td>
-            <td><a href="../html_1_tag_basic/html_h.html">h</a></td>
-            <td><a href="../html_1_tag_basic/html_list.html">list</a></td>
-            <td><a href="../html_1_tag_basic/html_image.html">image</a></td>
-            <td><a href="../html_1_tag_basic/html_table.html">table</a></td>
-            <td><a href="../html_1_tag_basic/html_word.html">word</a></td>
-        </tr>
-    </table>
-
+    <br/>
+    <p>
+        <img src="이미지/spongebob.png" border="2" style="float: left; border-color: yellowgreen;" width="150" height="150">
+    </p>
+        <p>저는 스폰지 밥입니다. 먹는 밥이 아니고요 제 이름이 그냥 그래요. 그리고 어린이부터 노인까지 많은 분들의 <span style="background-color: gray;">사</span>랑을 받고 있어요. 제 친구 뚱이도 있고요, 징징이도 있고 집게 사장님도 있어요</p>
 </body>
 </html>
