--- a/국비지원학원/web/css/css_2_selector/1_index_selector.html
+++ b/국비지원학원/web/css/css_2_selector/1_index_selector.html
@@ -42,6 +42,7 @@
     <h1>type 선택자</h1>
     <h2 id="bg">ID 선택자 1</h2>
     <h2 id="color">ID 선택자 2</h2>
+    <!-- id는 여러개로 설정해두면 안된다 -->
     <h2 id="color bg">ID 선택자 3</h2>
     <h2 id="color" class="size color">CLASS ID 선택자</h2>
 </body>
