css_float_overflow

--- a/국비지원학원/web/css/css_4_realation/css_2_float.html
+++ b/국비지원학원/web/css/css_4_realation/css_2_float.html
@@ -13,6 +13,7 @@
         }
         main{
             width: 900px;
+            /* 중앙정렬 레이아웃 */
             margin:0 auto;
         }
         header{
