--- a/국비지원학원/web/css/css_practice/css_animation_02_turn_word.html
+++ b/국비지원학원/web/css/css_practice/css_animation_02_turn_word.html
@@ -14,9 +14,14 @@
             height: 500px;
         }
         .child {
+            width: 80px;
+            height: 22px;
+            text-align: center;
             position: absolute;
-            left: 50%;
+            left: 50%; 
             top:50%;
+            margin-left: -40px;
+            margin-top: -11px;
             animation: koreateRotating 2s linear infinite alternate;
         }
         @keyframes koreateRotating{
