--- a/국비지원학원/web/css/css_5_trans/css_2_transition.html
+++ b/국비지원학원/web/css/css_5_trans/css_2_transition.html
@@ -6,7 +6,7 @@
     <title>Transition</title>
     <style>
         /* 
-        cdd 속성을 변경할때 시간차를 두고 속도를 조절하는 방법을 제공
+        css 속성을 변경할때 시간차를 두고 속도를 조절하는 방법을 제공
         */
         .trans{
             width: 300px;
