css_flex_display

--- a/국비지원학원/web/css/css_7_flex/flex_1_display.html
+++ b/국비지원학원/web/css/css_7_flex/flex_1_display.html
@@ -36,6 +36,7 @@
             flex-flow: row-reverse wrap;
             /* item 정렬 - flex-start 기본값 */
             justify-content: flex-start;
+            /* item 정렬 - flex-end 마지막 */
             justify-content: flex-end;
             /* 중앙으로 정렬 */
             justify-content: center;
