--- a/국비지원학원/web/css/css_practice/실습4.html
+++ b/국비지원학원/web/css/css_practice/실습4.html
@@ -14,8 +14,9 @@
             margin: 0;
         }
         #main-header {
-            margin-top: 5%;
-            margin-left: 7%;
+            margin-top: 2%;
+            margin-left: 3%;
+            margin-bottom: 2%;
         }
         .master-description{
             color: gray;
@@ -26,14 +27,17 @@
             display: none;
         }
         #main-navigation{
-            border-top: 2px solid gray;
-            border-bottom: 2px solid gray;
+            padding: 1% 0 1% 0;
+            border-top: 2px solid gainsboro;
+            border-bottom: 2px solid gainsboro;
         }
         .outer-menu{
             margin: 0;
         }
         .outer-menu-item{
             float: left;
+            font-weight: bolder;
+            width: 100px;
         }
         .pull-rigth{
             float: right;
@@ -46,6 +50,13 @@
             width: 70%;
         }
 
+        .article-title {
+            font-weight: normal;
+            font-size: x-large;
+        }
+        footer {
+            clear: both;
+        }
     </style>
 </head>
 <body>
