--- a/국비지원학원/web/css/css_practice/실습4_강사님ver.html
+++ b/국비지원학원/web/css/css_practice/실습4_강사님ver.html
@@ -93,9 +93,14 @@
             height: 30px;
             text-align:center;
             padding:5px 20px;
-            line-height: 20px;
+            line-height: 30px;
         }
 
+        /* navigation search-bar */
+        .search-bar{
+            padding: 7px;
+            height: 26px;
+        }
         .input-search{
             display:block;
             border: 1px solid #ccc;
