--- a/국비지원학원/web/javascript/01_variable.html
+++ b/국비지원학원/web/javascript/01_variable.html
@@ -19,13 +19,13 @@
 
     console.log(globalVariable);
 
-    //console.log(age);
+    // console.log(age);
 
-    /*
-    studentName = "최기근";
+    
+    /* studentName = "최기근";
     var studentName;
     console.log(studentName);
-    */
+     */
     {
         var studentName;
         studentName = "최기근";
@@ -61,6 +61,7 @@
     console.log(`choi : ${choi} type : ${typeof choi}`);
     //choi = {name : "홍길동", age : 45 , addr : "부산"}; // 오류
     console.log(choi.name);
+    // 배열 의 내용을 바꾸는건 가능하다.
     choi.name = "홍길동";
     console.log(choi.name);
 
