--- a/국비지원학원/web/javascript/01_variable.html
+++ b/국비지원학원/web/javascript/01_variable.html
@@ -61,7 +61,7 @@
     console.log(`choi : ${choi} type : ${typeof choi}`);
     //choi = {name : "홍길동", age : 45 , addr : "부산"}; // 오류
     console.log(choi.name);
-    // 배열 의 내용을 바꾸는건 가능하다.
+    // choi는 상수 이지만 객체 안의 값들은 서로 다른 변수이기때문에 변경이 가능하다
     choi.name = "홍길동";
     console.log(choi.name);
 
