--- a/국비지원학원/web/javascript/20210924_실습과제(Javascript)/09_20210924_homework.html
+++ b/국비지원학원/web/javascript/20210924_실습과제(Javascript)/09_20210924_homework.html
@@ -42,8 +42,9 @@
             for (j = i-1; j>0; j--){
                 document.write("*");
             }
-            document.write("<br/>")
+            document.write("<br/>");
         }
+        // 더 직관적인 코드가 뭔지 고민해보자
         </script>
 </head>
 <body>
