--- a/국비지원학원/web/javascript/07_function.html
+++ b/국비지원학원/web/javascript/07_function.html
@@ -51,7 +51,7 @@
             callBackFunc(result);
             return result;
         }
-
+        //printResult 호출이 늦게 된다고 콜백함수
         callTest(5, printResult); // 그냥 함수를 호출 하는거지
 
         callTest(6 , function(result){
