--- a/국비지원학원/web/javascript/09_object.html
+++ b/국비지원학원/web/javascript/09_object.html
@@ -25,7 +25,7 @@
         
         
         let myCar = new Car('520d', 0, "red");
-        console.log(myCar);
+        console.log(myCar); // 왜 속도가 40이 찍히지
         console.log(`myCar color : ${myCar.color}`);
         myCar.speed = 20;
         console.log(`myCar speed : ${myCar.speed}`);
