--- a/국비지원학원/web/javascript/10_class.html
+++ b/국비지원학원/web/javascript/10_class.html
@@ -15,7 +15,7 @@
             }
             // methods
             talk(message){
-                console.log(`${this.name} : ${this.age}`);
+                console.log(`${this.name}(${this.age}) : ${message}`);
             }
         }
 
