--- a/국비지원학원/web/javascript2/02_document.html
+++ b/국비지원학원/web/javascript2/02_document.html
@@ -9,8 +9,7 @@
     </script>
 </head>
 <body>
-    <!-- form>(input:text.tagClass#selectId[value'$'])*7
-    +input:button.tagClass#selectId[value='button'] -->
+    <!-- form>((input:text.tagClass#selectId[value'$'])*7+input:button.tagClass#selectId[value='button']) -->
     <form action="">
         <input type="text" name="name1" id="selectId" class="tagClass" value="1">
         <input type="text" name="name1" id="selectId" class="tagClass" value="2">
@@ -43,9 +42,17 @@
         let querySelectAll = 
             document.querySelectorAll("input[type = 'button']");
         document.write(
-            `querySelectAll length : ${querySelectAll.length}`
+            `querySelectAll length : ${querySelectAll.length}<br/>`
         );
-        querySelectAll[0].value = "버든";
+        querySelectAll[0].value = "버튼";
+
+        // 매개변수로 전달된 값이 아이디 속성값과 일치하는 요소를 반환
+        let id = document.getElementById('selectId');
+        console.log(id);
+        document.write(`selectId value : ${id.value} <br/>`);
+        // 매개변수로 전달된 값이 css 선택자와 일치하는 요소를 찾아 반환
+        let selector = document.querySelector("#selectId");
+        document.write(`querySelector value : ${selector.value}`);
     </script>
 </body>
 </html>
