--- a/국비지원학원/web/javascript2/06_dom_elem_style_1.html
+++ b/국비지원학원/web/javascript2/06_dom_elem_style_1.html
@@ -36,7 +36,7 @@
     <h1 id="target">View Attribute</h1>
     <button onclick="document.querySelector('#target').style.visibility='hidden';">요소숨김</button>
     <button onclick="document.querySelector('#target').style.visibility='visible';">요소표시</button>
-    <button onclick="document.querySelector('#target').style.visibility='block';">요소사용</button>
-    <button onclick="document.querySelector('#target').style.visibility='none';">사용안함</button>
+    <button onclick="document.querySelector('#target').style.display='block';">요소사용</button>
+    <button onclick="document.querySelector('#target').style.display='none';">사용안함</button>
 </body>
 </html>
