복습 내용추가및 오타수정

--- a/국비지원학원/web/javascript/01_operator.html
+++ b/국비지원학원/web/javascript/01_operator.html
@@ -92,9 +92,11 @@
         console.log(strAge != numAge)
         console.log(strAge === numAge)
         console.log(strAge !== numAge)
-
+        // true(참은 1로 반환)
         const bool = true;
+        console.log(bool);
         const strBool = "true";
+        console.log(strBool);
         console.log(bool == strBool);
         console.log(bool != strBool);
 
