--- a/국비지원학원/web/javascript/01_var_operation.html
+++ b/국비지원학원/web/javascript/01_var_operation.html
@@ -16,7 +16,7 @@
 
         호출이 불가능한 객체를 object / object(); 실행이 불가능한 녀석
 
-        ubdefined - 값이 정해지지 않은 상태
+        undefined - 값이 정해지지 않은 상태
         null - 값이 없다는 걸 표현하는 데이터 타입
         infinity - 무한 연산 ex) 10/0
         */
