--- a/국비지원학원/web/javascript_practice/practice.html
+++ b/국비지원학원/web/javascript_practice/practice.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8"/>
     <title></title>
+    <script src="practice.js"></script>
 </head>
 <body>
     <div id="hello">Hello World!!!</div>
-    <script src="practice.js">
-    let Hello = document.querySelector("#hello");
+    <script> //인라인에 js 문서 넣어놓고 밑에 쓰면 적용안됨 참고
+    let Hello = document.querySelector("div");
     Hello.style.color="red";
     </script>
 </body>
