--- a/국비지원학원/web/1001_평가자료/join.html
+++ b/국비지원학원/web/1001_평가자료/join.html
@@ -54,6 +54,7 @@
                     if (input[i].value == "") {
                         alert(`${input[i].name} 을 작성해주세요!`);
                         input[i].focus();
+                        break;
                     }
                 }
                 let inputPw = document.getElementById("inputPw");
