--- a/국비지원학원/JSP/28_jQuery_practice/src/main/webapp/06.Uncheck CheckBox.html
+++ b/국비지원학원/JSP/28_jQuery_practice/src/main/webapp/06.Uncheck CheckBox.html
@@ -9,7 +9,12 @@
 	 * 기능 : 체크해제
 	 * 함수 : removeAttr() or attr()
 	 */
-
+	$(function(){
+		$("input[value=run]").click(function(){
+			//$(".target input[type=checkbox]").removeAttr("checked");
+			$(".target input[type=checkbox]").attr("checked",false);
+		});
+	});
 </script>
 
 </head>
