--- a/국비지원학원/JSP/28_jQuery_practice/src/main/webapp/07.Move_Child.html
+++ b/국비지원학원/JSP/28_jQuery_practice/src/main/webapp/07.Move_Child.html
@@ -9,7 +9,20 @@
 	 * 기능 : parent1의 child를 parent2로 이동 
 	 * 함수 : appendTo() or append()
 	 */
-
+	$(function(){
+		$("input[type=button]").click(function(){
+			/*
+				prepend 내부요소의 앞으로
+				A.prependTo(B) A요소를 B요소의 내부 컨텐츠 앞에 추가
+				A.prepend(B) B요소를 A요소의 내부컨텐츠 앞에 추가
+				
+				A.appendTo(B) A요소를 B요소의 내부 컨텐츠 뒤에 추가
+				A.append(B) B요소를 A요소의 내부 컨텐츠 뒤에 추가
+			*/
+			$("#parent2").append($("#parent1 > #child"));
+			
+		});
+	});
 </script>
 
 </head>
