--- a/국비지원학원/JSP/28_jQuery_practice/src/main/webapp/01.Change_Background.html
+++ b/국비지원학원/JSP/28_jQuery_practice/src/main/webapp/01.Change_Background.html
@@ -10,9 +10,14 @@
  * 기능 : background 변경 Yellow로 변경
  * 함수 : css();
  */
- 
+ 	
 	function run(){
-		$("div").css("background-color","yellow");
+		//$("div").css("background-color","yellow");
+		$("#target").css({
+			backgroundColor : "yellow",
+			color : "black"
+		});
+		
 	}
 </script>
 </head>
