--- a/국비지원학원/JSP/28_jQuery_practice/src/main/webapp/02.Change_Parent.html
+++ b/국비지원학원/JSP/28_jQuery_practice/src/main/webapp/02.Change_Parent.html
@@ -10,9 +10,14 @@
 	 * 기능 : text 변경 
 	 * 함수 : text()
 	 */
+	 
+	//$(document).ready(function(){
 	$(function(){
 		$("#run").click(function(){
-			$("span").text("이렇게 변경합니다");
+			//$("span").text("이렇게 변경합니다");
+			//$("#target > span").text("change!!");
+			//선택자로 선택된 요소의 자식요소중 span tag 요소를 찾음
+			$("#target").children("span").text("change!!");
 		});
 	});
 	 
